soon spelling changed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Coming Soon</title>
 </head>
 <body>
-    <h1> Website is coming sonn</h1>
+    <h1> Website is coming soon</h1>
 </body>
 </html>
